tooling/nargo_cli/tests/snapshots/execution_success/regression_8229/execute__tests__force_brillig_false_inliner_-9223372036854775808.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "b",
        "type": {
          "kind": "array",
          "length": 4,
          "type": {
            "kind": "array",
            "length": 4,
            "type": {
              "kind": "boolean"
            }
          }
        },
        "visibility": "private"
      },
      {
        "name": "input",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 32
        },
        "visibility": "private"
      }
    ],
    "return_type": {
      "abi_type": {
        "kind": "boolean"
      },
      "visibility": "public"
    },
    "error_types": {}
  },
  "bytecode": "H4sIAAAAAAAA/63Ryw2AIBAEUBBERESwAkvADuy/KjEOiZ+56SQb9B2MzEpxJpWZ8SzLKJz1/WqSWENMEdPEWmKGWEfMEuuJOWIDMU9sJBaITcRimUXcU3vdcOZvWdN/38p1R0fS458b3EtjZwY7sejcoVOPzgI6ieTuSbyzA8MH6PeMAgAA",
  "debug_symbols": "dY/RCoMwDEX/Jc99UNge9FfGkFijFEJbYisM8d8XxW4y2FN6c3ou7QoD9XnqnB/DDO1jhV4cs5s6DhaTC16362agxC4Jka7gwtWKKOQTtD4zG1iQ83FpjuiPmVCUVgbIDzq1cHRM+2kzX7v6rzbN6db17WPfVX9qQuvk98ELisOe6Yxj9vZC0ysWUj4cJVgastDedDDtfgM=",
  "file_map": {},
  "names": [
    "main"
  ],
  "brillig_names": []
}
