tooling/nargo_cli/tests/snapshots/execution_success/regression_8229/execute__tests__force_brillig_true_inliner_-9223372036854775808.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "b",
        "type": {
          "kind": "array",
          "length": 4,
          "type": {
            "kind": "array",
            "length": 4,
            "type": {
              "kind": "boolean"
            }
          }
        },
        "visibility": "private"
      },
      {
        "name": "input",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 32
        },
        "visibility": "private"
      }
    ],
    "return_type": {
      "abi_type": {
        "kind": "boolean"
      },
      "visibility": "public"
    },
    "error_types": {
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/+1ayXLbMAylLMm2vNR2+yNSLTc+9tDs+9IPcJP61PbadnpR/zzBhLCfYDKTmQgHzggzHkrCI/AIAhRNOzLPMnv6RPY6sW3HtvR8aurC2M+2zd8mRYO2ci2OUQAcOwFwjAPgmATAMQ2AYzcAjr0AOPYD4JgFwHEQAMdhABxHAXAcB8DxXQAcJwocNXhOG+QZAc/ZzoUlT5st2szQZoFexvSyo5cJLda0GNJiQ8VMxULJSJNNwZw6gjBzPPtv28y2uCFvcBNVZMJvk/aX+eJTZurSMP95Bjabt18UbD/R4Z/3rJ0vVd2+EX5jgZN9ELMPmH0P5gAwBx7MIWAOPZgjwBx5MMeAOfZgTgBz4sGcAubUgzkDzJkHcw6Ycw/mAjAXHswlYC49mCvAXHkw14C59mBuAHPjwdwC5taDuQPMHWBIz7musxaUpXItlWNTrx8cP/tOdXwvIuEPY4469j8wmuvW84EF+mM+Mj4dEZ+eDp+c7feV7PN4M8d4Mf49Md6hDp9NLg6Aj8zFkY7vV+ci+x8Irlq5ODK7c4Px4VwcM6ba8smELql2x8G6FHQ8v5R332B8qEM+uD5wrk7Nbq4wb+W6KZXrpmjrZiNt3YAu8LpZKtfNx7ZuNtLWDegCr5t75bqZt3WzkbZuQKddN2Ozm2Ox0HXAD383Jts/gdsv6EPytapzJcmEvSbn6elMbaF75pUXHzz8DYyxV5mNsC6GZzy3HKc+4oUuA11S1f0M7H0CftAW80gF/oe9n9i2C324/9Thvyv813g7nmGMpK3Y8YzxdF783V4P7Yfy6x/3MbpzzPnqOh9w1cjE3uPZTSq4Rjpcy5e4Ip9IcI0dXFOh+2Nbmo/fcP3Xce0ap2lunPnQbNfPpGo+lnvL7Y8bXIOpqZ8HGeE/FXjb1N5B3L7ljxPrvVWxnq/Wq8Xq4aG8X70X9km4dihOjws7Sh+9JAAA",
  "debug_symbols": "nZBNCoMwEIXvMussMtoW9SoiEnUsgRAlTQpFcvdOSmzroptu8mV+3ht4G0w0hGuv7bzcoGk3GJw2Rl97s4zK68VydwOZHkSEBgWzyCwzT9AUiefMCzNGAbtH7x1Rsvgy5VOrcmQ9NDYYI+CuTHgt3VZlX/TK8VQKIDsx2XDWhtIvio9a/pbWddaiLN/q8x9yPB3kHVdq1O4QUkxGTqvBUC7nYMevqX+s+2QPeXXLSFNwlJw+SXOubV0JlFXHcXKrxaIUWFRdTMef",
  "file_map": {
    "50": {
      "source": "global G_B: u32 = 2825334515;\nfn main(b: [[bool; 4]; 4], input: u32) -> pub bool {\n    let _a = if b[0][(G_B % 4)] {\n        (input * G_B) as u64\n    } else {\n        3513574538769362461\n    };\n    false\n}\n",
      "path": ""
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
